k8s/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginxsvc-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginxsvc
                port:
                  number: 80
            path: /
            pathType: Exact
          - backend:
              service:
                name: newdep
                port:
                  number: 8080
            path: /hello
            pathType: Exact
status:
  loadBalancer: {}
